--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@clerk/themes": "^2.2.20",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "5.18.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -51,7 +51,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "postcss": "^8.5.3",
-    "prisma": "^6.16.2",
+    "prisma": "5.18.0" ,
     "tailwindcss": "^3.4.17"
   }
 }
